testsuite/tests/generic_interfaces/duplicate_struct_implements/test.out
== foo.lkt ==
foo.lkt:11:1: error: Interface is implemented multiple times by FooStruct
11 | struct FooStruct implements Interface, Interface {
   | ^


lkt_compile: Done
